@@ -4882,6 +4882,8 @@
       <member cname="GTK_HTML_COMMAND_KILL_WORD" name="KillWord"/>
       <member cname="GTK_HTML_COMMAND_KILL_WORD_BACKWARD" name="KillWordBackward"/>
       <member cname="GTK_HTML_COMMAND_TEXT_COLOR_APPLY" name="TextColorApply"/>
+      <member cname="GTK_HTML_COMMAND_SAVE_DATA_ON" name="SaveDataOn"/>
+      <member cname="GTK_HTML_COMMAND_SAVE_DATA_OFF" name="SaveDataOff"/>
     </enum>
     <enum name="HTMLCursorSkipType" cname="GtkHTMLCursorSkipType" type="enum">
       <member cname="GTK_HTML_CURSOR_SKIP_ONE" name="One"/>
@@ -12763,7 +12765,7 @@
       </method>
       <constructor cname="gtk_radio_button_new_with_label">
         <parameters>
-          <parameter type="GSList*" name="group"/>
+          <parameter type="GSList*" name="group" null_ok="1"/>
           <parameter type="const-gchar*" name="label"/>
         </parameters>
       </constructor>
@@ -12775,7 +12777,7 @@
       </constructor>
       <constructor cname="gtk_radio_button_new">
         <parameters>
-          <parameter type="GSList*" name="group"/>
+          <parameter type="GSList*" name="group" null_ok="1"/>
         </parameters>
       </constructor>
       <constructor cname="gtk_radio_button_new_with_label_from_widget">
@@ -12792,7 +12794,7 @@
       </method>
       <constructor cname="gtk_radio_menu_item_new_with_label">
         <parameters>
-          <parameter type="GSList*" name="group"/>
+          <parameter type="GSList*" name="group" null_ok="1"/>
           <parameter type="const-gchar*" name="label"/>
         </parameters>
       </constructor>
