@@ -1667,5 +1667,42 @@
     </attribute>
   </data>
 </rule>
+<rule>
+  <class name="GtkRadioMenuItem">
+    <constructor>gtk_radio_menu_item_new_with_label</constructor>
+  </class>
+  <data>
+   <attribute target="param">
+    <filter level="type">GSList*</filter>
+    <name>null_ok</name>
+    <value>1</value>
+   </attribute>
+  </data>
+</rule>
+<rule>
+  <class name="GtkRadioButton">
+    <constructor>gtk_radio_button_new</constructor>
+  </class>
+  <data>
+   <attribute target="param">
+    <filter level="type">GSList*</filter>
+    <name>null_ok</name>
+    <value>1</value>
+   </attribute>
+  </data>
+</rule>
+<rule>
+  <class name="GtkRadioButton">
+    <constructor>gtk_radio_button_new_with_label</constructor>
+  </class>
+  <data>
+   <attribute target="param">
+    <filter level="type">GSList*</filter>
+    <name>null_ok</name>
+    <value>1</value>
+   </attribute>
+  </data>
+</rule>
+
 
 </metadata>
