@@ -1,3 +1,9 @@
+2002-07-18  Duncan Mak  <duncan@ximian.com>
+
+	* parser/Gtk.metadata: Mark gtk_radio_menu_item_new_with_label, 
+	gtk_radio_button_new_with_label and gtk_radio_button_new with
+	null_ok flags.
+
 2002-07-17  Radek Doulik  <rodo@ximian.com>
 
 	* gtk/ScrolledWindow.custom: new file with ScrolledWindow custom
